--- a/MiRay Studio/mac/en.lproj/MainMenu.xib
+++ b/MiRay Studio/mac/en.lproj/MainMenu.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5053" systemVersion="13C1021" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="5053" systemVersion="13D65" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment defaultVersion="1070" identifier="macosx"/>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="5053"/>
@@ -289,9 +289,9 @@
                     <toolbarItem implicitItemIdentifier="CC74D502-49DF-4B1B-A958-E4254A8C2E3A" label="" paletteLabel="" id="Zq2-YY-wSP">
                         <nil key="toolTip"/>
                         <size key="minSize" width="300" height="17"/>
-                        <size key="maxSize" width="300" height="17"/>
+                        <size key="maxSize" width="300" height="35"/>
                         <textField key="view" horizontalHuggingPriority="251" verticalHuggingPriority="750" id="cGz-3o-VNY">
-                            <rect key="frame" x="0.0" y="14" width="300" height="17"/>
+                            <rect key="frame" x="0.0" y="14" width="300" height="22"/>
                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                             <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" borderStyle="bezel" id="7Gd-IC-L1T">
                                 <font key="font" metaFont="system"/>
